--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@makeomatic/deploy",
   "version": "0.0.0-development",
   "description": "Common build and deploy tasks wrapped in a cli",
-  "main": "./bin/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/makeomatic/deploy"
@@ -12,8 +11,8 @@
   "scripts": {
     "lint": "eslint ./bin",
     "test": "npm run lint && npm run test:http && npm run test:exec",
-    "test:http": "./bin/cli.js test run --http",
-    "test:exec": "./bin/cli.js test run",
+    "test:http": "./bin/cli.mjs test run --http",
+    "test:exec": "./bin/cli.mjs test run",
     "semantic-release": "semantic-release",
     "prepare": "husky install"
   },
@@ -21,33 +20,32 @@
     "access": "public"
   },
   "engine": {
-    "node": ">= 18.15.0"
+    "node": ">= 20.10.0"
   },
+  "type": "module",
   "devDependencies": {
-    "eslint": "^8.44.0",
-    "eslint-config-makeomatic": "^5.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "c8": "^8.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-makeomatic": "^6.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-unicorn": "^47.0.0",
-    "jest": "^29.6.0",
-    "typescript": "^5.1.6"
+    "eslint-plugin-unicorn": "^50.0.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@fastify/compress": "^6.4.0",
-    "@sinclair/typebox": "^0.29.3",
-    "@types/node": "^20.3.3",
-    "bluebird": "^3.7.2",
-    "chrome-launcher": "^0.15.2",
-    "chrome-remote-interface": "^0.32.2",
-    "cross-env": "^7.0.3",
+    "@commitlint/cli": "^18.4.3",
+    "@fastify/compress": "^6.5.0",
+    "@sinclair/typebox": "^0.31.28",
+    "@types/node": "^20.10.5",
+    "chrome-launcher": "^1.1.0",
+    "chrome-remote-interface": "^0.33.0",
+    "cosmiconfig": "^9.0.0",
     "death": "^1.1.0",
     "debug": "^4.3.4",
-    "execa": "^5.1.1",
-    "fastify": "^4.19.2",
-    "find-up": "^5.0.0",
-    "get-port": "^5.1.1",
-    "glob": "^10.3.1",
+    "execa": "^8.0.1",
+    "fastify": "^4.25.1",
+    "get-port": "^7.0.0",
+    "glob": "^10.3.10",
     "husky": "~8.0.3",
     "hyperid": "^3.1.1",
     "is": "^3.3.0",
@@ -56,21 +54,21 @@
     "lodash.merge": "^4.6.2",
     "lodash.set": "^4.3.2",
     "npm-path": "^2.0.4",
-    "pino": "^8.14.1",
-    "read-pkg": "^5.2.0",
-    "rimraf": "^5.0.1",
-    "semantic-release": "21.0.7",
-    "serialize-error": "^8.1.0",
-    "shelljs": "^0.8.5",
+    "p-limit": "^5.0.0",
+    "pino": "^8.17.1",
+    "read-pkg": "^9.0.1",
+    "rimraf": "^5.0.5",
+    "semantic-release": "22.0.12",
+    "serialize-error": "^11.0.3",
     "split2": "^4.2.0",
-    "strip-final-newline": "^2.0.0",
-    "tempy": "^1.0.1",
-    "undici": "^5.22.1",
+    "strip-final-newline": "^4.0.0",
+    "tempy": "^3.1.0",
+    "undici": "^6.2.0",
     "yargs": "^17.7.2"
   },
   "bin": {
-    "mdep": "./bin/cli.js",
-    "mdep-runner": "./bin/runner.js"
+    "mdep": "./bin/cli.mjs",
+    "mdep-runner": "./bin/runner.mjs"
   },
   "files": [
     "bin/",
@@ -80,6 +78,6 @@
     ".husky/*",
     "!.husky/_",
     ".releaserc.json",
-    ".commitlintrc.js"
+    ".commitlintrc.cjs"
   ]
 }
