--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:http": "./bin/cli.mjs test run --http",
     "test:exec": "./bin/cli.mjs test run",
     "semantic-release": "semantic-release",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "publishConfig": {
     "access": "public"
@@ -24,46 +24,46 @@
   },
   "type": "module",
   "devDependencies": {
-    "c8": "^9.0.0",
-    "eslint": "^8.56.0",
+    "c8": "^10.1.2",
+    "eslint": "^8.57.1",
     "eslint-config-makeomatic": "^6.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-unicorn": "^50.0.1",
-    "typescript": "^5.3.3"
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@commitlint/cli": "^18.4.4",
-    "@fastify/compress": "^6.5.0",
-    "@sinclair/typebox": "^0.32.5",
-    "@types/node": "^20.10.7",
-    "chrome-launcher": "^1.1.0",
-    "chrome-remote-interface": "^0.33.0",
+    "@commitlint/cli": "^19.5.0",
+    "@fastify/compress": "^8.0.1",
+    "@sinclair/typebox": "^0.33.12",
+    "@types/node": "^22.6.1",
+    "chrome-launcher": "^1.1.2",
+    "chrome-remote-interface": "^0.33.2",
     "cosmiconfig": "^9.0.0",
     "death": "^1.1.0",
-    "debug": "^4.3.4",
-    "execa": "^8.0.1",
-    "fastify": "^4.25.2",
-    "get-port": "^7.0.0",
-    "glob": "^10.3.10",
-    "husky": "~8.0.3",
-    "hyperid": "^3.1.1",
+    "debug": "^4.3.7",
+    "execa": "^9.4.0",
+    "fastify": "^5.0.0",
+    "get-port": "^7.1.0",
+    "glob": "^11.0.0",
+    "husky": "~9.1.6",
+    "hyperid": "^3.3.0",
     "is": "^3.3.0",
     "js-yaml": "^4.1.0",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "lodash.set": "^4.3.2",
     "npm-path": "^2.0.4",
-    "p-limit": "^5.0.0",
-    "pino": "^8.17.2",
+    "p-limit": "^6.1.0",
+    "pino": "^9.4.0",
     "read-pkg": "^9.0.1",
-    "rimraf": "^5.0.5",
-    "semantic-release": "22.0.12",
+    "rimraf": "^6.0.1",
+    "semantic-release": "24.1.1",
     "serialize-error": "^11.0.3",
     "split2": "^4.2.0",
     "strip-final-newline": "^4.0.0",
     "tempy": "^3.1.0",
-    "undici": "^6.3.0",
+    "undici": "^6.19.8",
     "yargs": "^17.7.2"
   },
   "bin": {
